2001-04-24  Sam Steingold  <sds@gnu.org>

	* intgcd.d (I_I_xgcd_I_I_I): do not use bit operations for logical
	variables sA and sB (this caused incorrect results on alpha-tru64)

2001-04-24  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc5/linux.lisp, bindings/linuxlibc6/linux.lisp:
	added package prefix to IN-PACKAGE and DELETE-PACKAGE

2001-04-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (linkkit): rm-r it before creating links

2001-04-23  Sam Steingold  <sds@gnu.org>

	* affi1.lisp: use DEFPACKAGE to define package AFFI

2001-04-22  Sam Steingold  <sds@gnu.org>

	Finished re-packaging in the modules directory
	* bindings/amigaos/asl-load.lisp, bindings/amigaos/window.lisp,
	bindings/linuxlibc5/linux.lisp, bindings/linuxlibc6/linux.lisp,
	clx/mit-clx/package.lisp, modules/postgresql642/postgresql.
	modules/postgresql632/postgresql.lisp, modules/wildcard/wildcard.lisp:
	use DEFPACKAGE, not CLtL1 IN-PACKAGE
	* new-clx/demos/clx-demos.lisp: getenv is in EXT, not SYS now,
	use strings, not symbols in DEFPACKAGE

2001-04-20  Sam Steingold  <sds@gnu.org>

	* constobj.d (version): bump the bytecode version due to repackaging

2001-04-19  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (clhs): BROWSER defaults to *BROWSER*, not :netscape

2001-04-18  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): quote load_extra_file_types for `clisp file`

2001-04-18  Sam Steingold  <sds@gnu.org>

	Move EXECUTE from COMMON-LISP to EXT
	* constsym.d (EXECUTE): in EXT, not LISP
	* init.lisp (export): export EXECUTE from EXT

2001-04-18  Sam Steingold  <sds@gnu.org>

	ANSI CL compliance: HANDLER-BIND uses multiple handlers
	for the a single error
	* compiler.lisp (c-HANDLER-BIND): collect all handlers, even for
	duplicate types
	* eval.d (invoke_handlers): go over the whole list of handlers,
	not stopping after the first match has been found.

2001-04-18  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (stream-tab): new function
	(disassemble-closure): use it
